...
    case myAnimeList
    case trakt

    var id: String { rawValue }
    var title: String {
        switch self {
        case .local: return "My Library"
        case .anilist: return "AniList"
        case .myAnimeList: return "MAL"
        case .trakt: return "Trakt"
        }
    }
    var service: TrackerService? {
...
